# orion-os-cmo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PTD.md  README.md  Roadmap.md  SYMBIOSIS-ASSESSMENT.md  manifest.yml  pyproject.toml
examples/: self_hosted_harness_boot.py
orion_os_cmo/: __init__.py
orion_os_cmo/adapters/: _transport.py
orion_os_cmo/agent_coding/: __init__.py  agent.py  types.py
orion_os_cmo/agent_geo/: __init__.py  agent.py  types.py
orion_os_cmo/agent_influencer/: __init__.py  agent.py
orion_os_cmo/agent_linkedin/: __init__.py  agent.py
orion_os_cmo/agent_reddit/: __init__.py  agent.py
orion_os_cmo/agent_seo/: __init__.py  agent.py  types.py
orion_os_cmo/agent_ugc/: __init__.py  agent.py
orion_os_cmo/agent_writer/: __init__.py  agent.py  types.py
orion_os_cmo/agent_x/: __init__.py  agent.py
orion_os_cmo/client_workspace/: __init__.py  _yaml.py  approvals.py  layout.py  metrics.py  outputs.py  runs.py  store.py  types.py
orion_os_cmo/common/: result.py
tests/: test_adapter_analytics_ingest.py  test_adapter_cms_publish.py  test_adapter_geo_probe.py  test_adapter_github_pr.py  test_adapter_seo_audit.py  test_agent_coding.py  test_agent_directives.py  test_agent_geo.py  test_agent_seo.py  test_agent_writer.py  test_brief_renderer.py  test_client_workspace.py  test_distribution.py  test_generative_pbt.py  test_reach.py  test_strategy_store_persistence.py  test_strategy_store_retrieval.py  test_strategy_store_synthesis.py  test_transport_self_hosted.py  test_transport_url_scheme.py  test_weekly_orchestrator.py
(+55 files in other folders)
